@@ -1,150 +1,118 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>edu.brandeis.cs.lapps</groupId>
-    <artifactId>reverb-web-service</artifactId>
-    <version>1.0.2</version>
-    <packaging>war</packaging>
-    <name>Brandeis LAPPS Web Services Wrapping ReVerb relation extractor</name>
-    <description>
-        Publish API for the LAPPS exchange data structure (LEDS), the thing that will be serialized to from JSON-LD.
-        Provide converter for the ReVerb output into LEDS and LIF format.
-    </description>
     <parent>
-        <artifactId>war-parent-pom</artifactId>
-        <groupId>org.lappsgrid.maven</groupId>
-        <version>2.0.5</version>
+        <groupId>edu.brandeis.lapps</groupId>
+        <artifactId>parent-pom</artifactId>
+        <version>1.0.0</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
+
+    <artifactId>reverb</artifactId>
+    <packaging>pom</packaging>
+    <version>1.1.0-SNAPSHOT</version>
+    <name>Brandeis LAPPS Grid wrapper for ReVerb relation extractor</name>
+    <description>
+        This project is to build ReVerb wrappers based on LAPPS Grid I/O specification,
+        namely using LAPPS Interchange Format and LAPPS Vocabulary.
+        Two wrappers are available: a simple commandline interface and lapps webservice.
+        By default (mvn package), the webservice module is built into a war artifact.
+        To build the CLI application, use "cli" profile (mvn pacakge -Pcli).
+        This version uses ReVerb ${reverb.version} internally.
+    </description>
+
+    <developers>
+        <developer>
+            <id>keighrim</id>
+            <name>Keigh Rim</name>
+            <email>krim@brandeis.edu</email>
+            <organization>Lab for Linguistics and Computation, Brandeis University</organization>
+            <organizationUrl>https://www.cs.brandeis.edu/~llc/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:https://github.com/lappsgrid-services/brandeis-reverb-service.git</connection>
+        <developerConnection>scm:git:git@github.com:lappsgrid-services/brandeis-reverb-service.git</developerConnection>
+        <url>https://github.com/lappsgrid-services/brandeis-reverb-service</url>
+    </scm>
+
+    <issueManagement>
+        <url>https://github.com/lappsgrid-services/brandeis-reverb-service/issues</url>
+        <system>GitHub</system>
+    </issueManagement>
+
+    <repositories>
+        <repository>
+            <id>brandeis-llc-nexus</id>
+            <url>http://morbius.cs-i.brandeis.edu:8081/repository/maven-public/</url>
+        </repository>
+    </repositories>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <modules>
+        <module>reverb-base</module>
+    </modules>
 
     <properties>
-        <lapps.all>2.3.3</lapps.all>
+        <reverb.version>1.4.1</reverb.version>
     </properties>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>the Maven central repository</id>
-            <url>http://repo.maven.apache.org/maven2/</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.lappsgrid</groupId>
-            <artifactId>all</artifactId>
-            <version>${lapps.all}</version>
-        </dependency>
-
-        <!-- Main ReVerb package -->
-        <dependency>
-            <groupId>edu.washington.cs.knowitall</groupId>
-            <artifactId>reverb-core</artifactId>
-            <version>1.4.1</version>
-        </dependency>
-        <dependency>
-            <groupId>xerces</groupId>
-            <artifactId>xercesImpl</artifactId>
-            <version>2.11.0</version>
-        </dependency>
-
-    </dependencies>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <modules>
+                <module>reverb-webservice</module>
+                <module>reverb-cli</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>cli</id>
+            <modules>
+                <module>reverb-cli</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>default</id>
+            <modules>
+                <module>reverb-webservice</module>
+            </modules>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+    </profiles>
 
     <build>
-        <finalName>reverb-web-service#${project.version}</finalName>
-
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass/>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                    <annotationProcessors>
-                        <annotationProcessor>
-                            org.lappsgrid.annotation.processing.MetadataProcessor
-                        </annotationProcessor>
-                    </annotationProcessors>
-                </configuration>
-            </plugin>
-
-            <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>src/main/resources/metadata</directory>
+                            <directory>${basedir}</directory>
+                            <includes>
+                                <include>${project.artifactId}*.war</include>
+                                <include>${project.artifactId}*.jar</include>
+                            </includes>
                         </fileset>
                     </filesets>
                 </configuration>
             </plugin>
-
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.18.1</version>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx2048m</argLine>
-                    <argLine>-XX:+UseConcMarkSweepGC</argLine>
-                </configuration>
-            </plugin>
-
-            <!-- will generate Version class at project root, which is used in test -->
-            <plugin>
-                <groupId>org.anc.maven.plugins</groupId>
-                <artifactId>anc-maven-plugin</artifactId>
-                <version>1.0.7</version>
-                <executions>
-                    <execution>
-                        <id>version-class</id>
-                        <phase>generate-sources</phase>
-                        <goals>
-                            <goal>version-class</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <package>edu.brandeis.cs.lappsgrid.reverb</package>
+                    <tagNameFormat>v@{project.version}</tagNameFormat>
                 </configuration>
             </plugin>
         </plugins>
-
-        <!-- copy version as resource -->
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-                <includes>
-                    <include>**/version.properties</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>**/version.properties</exclude>
-                </excludes>
-            </resource>
-        </resources>
-
     </build>
 
 </project>
